--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "hamburgers": "^1.1.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
